Thesis text update.

--- a/text/michael-kala-bp-2017.tex
+++ b/text/michael-kala-bp-2017.tex
@@ -39,6 +39,8 @@
 \usepackage{transparent}
 \usepackage{wrapfig}
 \usepackage{float} 
+\usepackage{listings}
+
 
 \usepackage{cmap}           
 \usepackage[T1]{fontenc}    
@@ -93,7 +95,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %% Název práce
-\nazev{ Zásuvný modul QGIS pro pozemní monitorování radiace}
+\nazev{ Zásuvný modul QGIS pro pozemní~monitorování~radiace}
 {QGIS Plugin for Ground Radiation Monitoring     }
 
 %% Jméno a příjmení autora
@@ -180,7 +182,7 @@
 	\vspace{1em}
 		%\noindent
 	\par\hspace{2ex}
-	{Chtěl bych poděkovat }
+	{Chtěl bych poděkovat rodině, Ing. Landovi Ph.D. a Mgr. Helebrantovi... }
 }
 
 % Vysázení obsahu
@@ -194,6 +196,10 @@
 
 % jednotlivé kapitoly
 \include{1-uvod}
+\include{2-teorie}
+\include{3-technologie}
+\include{4-plugin}
+\include{5-zaver}
 
 % Vysázení seznamu zkratek
 \include{zkratky}
