--- a/text/zkratky.tex
+++ b/text/zkratky.tex
@@ -1,9 +1,13 @@
 
 \begin{seznamzkratek}{ABCDE}
 
+	\novazkratka{GNU GPL}
+	      {GNU GPL}
+	      {????}
+
 	\novazkratka{SÚRO}
 	      {SÚRO}
-	      {Státní ústav radiační ochrany}
+	      {Státní ústav radiační ochrany, v. v. i.}
 	      
 	\novazkratka{PSF}
 		  {PSF}
